--- a/app/src/main/res/layout/fragment_persuratan_simpan.xml
+++ b/app/src/main/res/layout/fragment_persuratan_simpan.xml
@@ -12,32 +12,53 @@
         android:background="@color/colorSecondaryBackground">
 
         <RelativeLayout
+            android:id="@+id/layout_search"
             android:textColor="@color/white"
-            android:background="@drawable/btn_shape_all_blue_search"
+            android:background="@color/grey_s"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/space_45"
-            android:layout_margin="@dimen/space_14">
+            android:layout_height="@dimen/space_50">
 
-            <ui.CustomEditText
-                android:id="@+id/text_search"
-                android:textColor="@color/white"
-                android:background="@color/transparant_pure"
+            <LinearLayout
+                android:orientation="horizontal"
+                android:background="@drawable/btn_shape_all_white_search"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/space_45"
-                android:textColorHint="@color/white"
-                android:hint="search"
-                android:layout_marginRight="@dimen/space_35"
-                android:layout_marginLeft="@dimen/space_3" />
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/space_7">
 
-            <ImageView
-                android:src="@drawable/ic_search_white_32"
-                android:layout_width="@dimen/space_25"
-                android:layout_height="@dimen/space_25"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="@dimen/space_5" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:layout_weight="1">
+                    <ImageView
+                        android:gravity="right"
+                        android:src="@drawable/ic_search_white"
+                        android:tint="@color/grey"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="@dimen/space_30"
+                        android:layout_height="match_parent" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <ui.CustomtextView
+                        android:text="Search"
+                        android:textColor="@color/grey"
+                        android:gravity="fill_vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </RelativeLayout>
+            </LinearLayout>
+
         </RelativeLayout>
+
+        <View
+            android:background="@color/grey"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -45,31 +66,27 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/space_14"
-                android:layout_marginRight="@dimen/space_14"
-                android:layout_above="@+id/layout_button"
-                android:layout_marginBottom="@dimen/space_14">
+                android:layout_above="@+id/layout_button">
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/btn_shape_white">
+                    android:background="@color/white">
                     <RelativeLayout
                         android:id="@+id/contact_us_header_container"
                         android:layout_width="fill_parent"
-                        android:layout_height="@dimen/space_40"
-                        android:minHeight="?attr/actionBarSize"
+                        android:layout_height="@dimen/space_30"
                         android:layout_alignParentTop="true"
-                        android:background="@drawable/btn_shape_white"
+                        android:background="@color/grey_s"
                         android:orientation="horizontal">>
                         <ui.CustomtextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Permohonan"
+                            android:text="PERMOHONAN (01/08)"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/space_16"
+                            android:textSize="@dimen/space_12"
                             android:textStyle="bold"
                             font:name="GOTHAM_BOLD"
                             font:type = "bold"
@@ -81,35 +98,17 @@
                             android:layout_alignParentBottom="true"
                             android:gravity="fill_vertical" />
 
-                        <ImageView
-                            android:layout_width="@dimen/space_20"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/imageView"
-                            android:src="@drawable/gns_menu"
-                            android:layout_alignParentRight="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentTop="true"
-                            android:tint="@color/black" />
-
-                        <ImageView
-                            android:layout_width="@dimen/space_20"
-                            android:layout_height="match_parent"
-                            android:id="@+id/imageView14"
-                            android:src="@drawable/ic_email_2"
-                            android:tint="@color/black"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentStart="true"
-                            android:layout_alignParentTop="true"
-                            android:layout_alignParentBottom="true" />
                     </RelativeLayout>
 
                     <View
-                        android:layout_margin="@dimen/space_5"
-                        android:background="@color/black"
+                        android:background="@color/grey"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"/>
 
                     <android.support.v7.widget.RecyclerView
+                        android:layout_marginTop="@dimen/space_14"
+                        android:layout_marginLeft="@dimen/space_14"
+                        android:layout_marginRight="@dimen/space_14"
                         android:visibility="visible"
                         android:id="@+id/my_recycler_view"
                         android:layout_width="match_parent"
