--- a/app/src/main/res/layout/row_persuratan_dalamproses.xml
+++ b/app/src/main/res/layout/row_persuratan_dalamproses.xml
@@ -25,16 +25,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ui.CustomtextView
-                font:name = "GOTHAM_BOLD"
-                android:textSize="@dimen/space_12"
-                android:id="@+id/text_Date"
-
-                android:text="Senin,19 sept 2016"
+            <LinearLayout
+                android:id="@+id/layout_indicator"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/space_5"
-                android:layout_marginTop="@dimen/space_2" />
+                android:gravity="fill_vertical"
+                android:layout_marginTop="@dimen/space_2">
+
+                <ImageView
+                    android:id="@+id/imgRead"
+                    android:layout_marginTop="-2dp"
+                    android:src="@drawable/greenball"
+                    android:tint="@color/colorSearch"
+                    android:layout_width="@dimen/space_12"
+                    android:layout_height="@dimen/space_12"
+                    android:layout_marginRight="@dimen/space_5"/>
+                <ui.CustomtextView
+                    font:name = "GOTHAM_BOLD"
+                    android:textSize="@dimen/space_12"
+                    android:id="@+id/text_Date"
+                    android:text="Senin,19 sept 2016"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
 
             <ui.CustomtextView
                 font:name = "GOTHAM_BOLD"
@@ -58,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorListItem"
-                android:layout_below="@+id/text_Date"
+                android:layout_below="@+id/layout_indicator"
                 android:layout_alignRight="@+id/text_time"
                 android:layout_alignEnd="@+id/text_time"
                 android:layout_marginLeft="@dimen/space_5"
@@ -173,7 +189,7 @@
             </LinearLayout>
             <ImageView
                 android:layout_width="@dimen/space_20"
-                android:layout_height="@dimen/space_20"
+                android:layout_height="@dimen/space_16"
                 android:id="@+id/imageView4"
                 android:src="@drawable/gns_clock"
                 android:layout_toStartOf="@+id/text_time"
