--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,8 +42,17 @@
     <style name="MyTabLayoutTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
         <item name="android:textSize">10sp</item>
         <item name="android:textAllCaps">true</item>
-        <item name="tabSelectedTextColor">@color/white</item>
+        <item name="tabSelectedTextColor">@color/colorSearch</item>
         <item name="tabIndicatorHeight">5dp</item>
+    </style>
+
+    <style name="MyTabLayoutTextAppearanceNew" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
+        <item name="android:textSize">6sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="tabSelectedTextColor">@color/black</item>
+        <item name="tabIndicatorHeight">1dp</item>
+        <item name="tabPaddingStart">2dp</item>
+        <item name="tabPaddingEnd">2dp</item>
     </style>
 
     <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
