--- a/app/src/main/res/layout/menu_disposisi.xml
+++ b/app/src/main/res/layout/menu_disposisi.xml
@@ -25,6 +25,7 @@
             android:layout_weight="1">
 
             <LinearLayout
+                android:id="@+id/layout_notif"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
