--- a/app/src/main/res/layout/persuratan_pilih_surat.xml
+++ b/app/src/main/res/layout/persuratan_pilih_surat.xml
@@ -19,6 +19,7 @@
 
 
     <RelativeLayout
+        android:visibility="gone"
         android:layout_margin="@dimen/space_14"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -29,4 +30,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
+
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 </LinearLayout>
