--- a/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
@@ -30,7 +30,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:src="@drawable/logo_bp_batam"
+                android:src="@drawable/avatar"
                 android:layout_margin="@dimen/space_5" />
 
 
