--- a/app/src/main/res/layout/row_disposisi_umum.xml
+++ b/app/src/main/res/layout/row_disposisi_umum.xml
@@ -256,7 +256,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="lihat surat"
+                    android:text="lihat disposisi"
                     android:textColor="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
