--- a/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:font="http://schemas.android.com/apk/res-auto"
-
+    android:background="@color/colorSecondaryBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:background="@color/white"
         android:layout_marginTop="@dimen/space_10"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -64,41 +65,6 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true" />
 
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="@dimen/space_14"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/space_25">
-
-                        <RelativeLayout
-                            android:gravity="center"
-                            android:layout_width="@dimen/space_20"
-                            android:layout_height="@dimen/space_20">
-                            <ImageView
-                                android:id="@+id/img_status"
-                                android:src="@drawable/ball_red"
-                                android:tint="@color/colorReject"
-                                android:layout_width="@dimen/space_20"
-                                android:layout_height="@dimen/space_20" />
-                        </RelativeLayout>
-
-                        <RelativeLayout
-                            android:gravity="center"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/space_20">
-
-                            <ui.CustomtextView
-                                android:gravity="fill_vertical"
-                                font:name = "GOTHAM_BOLD"
-                                android:id="@+id/text_status"
-                                android:textColor="@color/black"
-                                android:text="Tinggi"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
-                        </RelativeLayout>
-
-                    </LinearLayout>
                 </RelativeLayout>
 
 
@@ -125,10 +91,9 @@
                 <ui.CustomtextView
                     font:name="GOTHAM_BOOK"
                     android:id="@+id/lbl_Judul"
-                    android:text="Tutorial Backup Hapus Email"
+                    android:text="Tutorial Backup Hapus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="1"
                     android:layout_alignParentLeft="true"
                     android:layout_marginTop="@dimen/space_3"
                     android:layout_alignParentStart="true" />
@@ -292,33 +257,71 @@
             android:background="@color/colorLineBar"
             android:layout_width="wrap_content"
             android:layout_height="1dp"/>
-        <LinearLayout
-            android:layout_marginLeft="@dimen/space_25"
+        <RelativeLayout
             android:layout_marginTop="@dimen/space_10"
+            android:layout_marginLeft="@dimen/space_25"
             android:layout_marginBottom="@dimen/space_10"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/space_20">
-
-            <ImageView
-                android:src="@drawable/opin"
-                android:layout_width="@dimen/space_20"
-                android:layout_height="match_parent" />
-
-            <ui.CustomtextView
-                android:id="@+id/btnOpini"
-                android:layout_marginLeft="@dimen/space_10"
-                font:name = "GOTHAM_BOLD"
-                android:text="Opini       "
-                android:gravity="fill_vertical"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-        </LinearLayout>
+                android:layout_height="@dimen/space_20">
 
-        <View
-            android:background="@color/colorSecondaryBackground"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/space_10"/>
+                <ImageView
+                    android:src="@drawable/opin"
+                    android:layout_width="@dimen/space_20"
+                    android:layout_height="match_parent" />
+
+                <ui.CustomtextView
+                    android:id="@+id/btnOpini"
+                    android:layout_marginLeft="@dimen/space_10"
+                    font:name = "GOTHAM_BOLD"
+                    android:text="Opini       "
+                    android:gravity="fill_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/space_14"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/space_25">
+
+                <RelativeLayout
+                    android:gravity="center"
+                    android:layout_width="@dimen/space_20"
+                    android:layout_height="@dimen/space_20">
+                    <ImageView
+                        android:id="@+id/img_status"
+                        android:src="@drawable/ball_red"
+                        android:tint="@color/colorReject"
+                        android:layout_width="@dimen/space_20"
+                        android:layout_height="@dimen/space_20" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/space_20">
+
+                    <ui.CustomtextView
+                        android:gravity="fill_vertical"
+                        font:name = "GOTHAM_BOLD"
+                        android:id="@+id/text_status"
+                        android:textColor="@color/black"
+                        android:text="Tinggi"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+
+
+            </LinearLayout>
+        </RelativeLayout>
+
+
     </LinearLayout>
 
 </RelativeLayout>
