--- a/app/src/main/res/layout/persuratan_pilih_surat.xml
+++ b/app/src/main/res/layout/persuratan_pilih_surat.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/tool_bar"
-        layout="@layout/tool_bar"
+        layout="@layout/tool_bar_lihat_surat"
         />
 
     <View
