--- a/app/src/main/res/layout/row_persuratan_permohonan.xml
+++ b/app/src/main/res/layout/row_persuratan_permohonan.xml
@@ -26,6 +26,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:layout_marginTop="@dimen/space_2"
+                android:visibility="gone"
+                android:id="@+id/img_unread"
+                android:src="@drawable/ball_red"
+                android:layout_width="@dimen/space_20"
+                android:layout_height="@dimen/space_18" />
+
             <ui.CustomtextView
                 font:name = "GOTHAM_BOLD"
                 android:textSize="@dimen/space_12"
@@ -236,7 +244,7 @@
                     android:layout_alignTop="@+id/btnDownload_lampiran"
                     android:layout_toLeftOf="@+id/btnDownload_lampiran"
 
-                    android:layout_width="90dp">
+                    android:layout_width="@dimen/space_100">
                     <ImageView
                         android:id="@+id/imgDownload"
                         android:src="@drawable/downloadsave32"
